Actions
Bug #14259
closedInteger#pow returns an invalid result with large modulo
Bug #14259:
Integer#pow returns an invalid result with large modulo
Actions
Added by mrkn (Kenta Murata) over 8 years ago. Updated over 6 years ago.
Applied in changeset trunk|r61517.
numeric.c: Fix Integer#pow with a large Fixnum modulo
numeric.c: Fix Integer#pow with a large Fixnum modulo
[Bug #14259] [ruby-core:84562]
test/ruby/test_numeric.rb: add assertions for reproducing this bug.
ruby_2_5 r61629 merged revision(s) 61517.